# Python-CLI-Task-Manager

./: .gitignore  LICENSE  README.md  my_tasks.JSON  my_tasks.csv  pyproject.toml
data/: tasks.db  tasks.json
src/task_manager/: models.py  services.py  storage.py  task.py  utils.py
src/task_manager.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
tests/: test_services.py  test_utils.py
